layout shift fixed

--- a/kyky/src/styles/JobCalendar.scss
+++ b/kyky/src/styles/JobCalendar.scss
@@ -144,22 +144,24 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: flex-start;
   align-items: center;
+  gap: 20%;
 
   .scheduleButton {
     height: 40px;
     width: 150px;
+    bottom: 40px;
     background-color: $kyky-primary-dark;
     color: white;
     border-radius: 20px;
-    position: relative;
+    position: absolute;
   }
 
   .schedules {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     width: 80%;
     gap: 0.5rem;
@@ -181,6 +183,8 @@
 
         .expand {
           background: none;
+          border: none;
+          outline: none;
         }
       }
       .activities {
